[metadata]
description_file = README.md

[tool:pytest]
markers =
    cex: tests for CEX endpoints
    funding: tests for funding rate endpoints
    premium: tests for premium endpoints
    forex: tests for forex endpoints
    telegram: tests for telegram endpoints
    naver: tests for naver endpoints
    errors: tests for error handling
    types: tests for response types

[flake8]
exclude =
    .git,
    build,
    dist
max-complexity = 10
ignore = E501, W503, W504
