[metadata]
description_file = README.md

[tool:pytest]
addopts = --strict-markers
markers =
    cex: tests for CEX endpoints
    funding: tests for funding rate endpoints
    premium: tests for premium endpoints
    forex: tests for forex endpoints
    telegram: tests for telegram endpoints
    naver: tests for naver endpoints
    types: tests for response types
    integration: live tests that hit prod endpoints (need DATAMAXI_API_KEY)
    smoke: live alive-check lane pinging each endpoint once (need DATAMAXI_API_KEY)

[flake8]
exclude =
    .git,
    build,
    dist
max-complexity = 10
ignore = E501, W503, W504
